[package]
name = "url_titles"
version = "1.2.0"
authors = ["Jacob Shaffer <jpshaffer5481@gmail.com>"]
edition = "2021"

[dependencies]
rayon = "1.5.1"
reqwest = { version = "0.11", default-features = false, features = ["native-tls", "blocking"] }
select = "0.5"
structopt = "0.3"
tokio = { version = "1", features = ["rt"] }
youtube_dl = "0.8.0"
