[package]
name = "url_titles"
version = "1.2.1"
authors = ["Jacob Shaffer <jpshaffer5481@gmail.com>"]
edition = "2021"

[dependencies]
rayon = "1.5.1"
reqwest = { version = "0.11", default-features = false, features = ["native-tls", "blocking"] }
select = "0.6"
structopt = "0.3"
youtube_dl = "0.8.0"
